--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,8 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+.env
+users_list.txt
+master_log.txt
+bot_database.db
+banned_users.txt
