--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aiofiles==25.1.0
 aiosqlite==0.22.1
 apscheduler==3.11.1
+Flask==3.1.3
 python-dotenv==1.2.1
 python-telegram-bot==22.6
+Requests==2.32.5
